# easyQuake_seiscomp

./: .gitignore
sceasyquake/: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  setup.py
sceasyquake/docs/: INSTALL.md  INTEGRATION.md
sceasyquake/etc/: sceasyquake.conf
sceasyquake/examples/: README.md  compare_backends.py
sceasyquake/extras/: sceasyquake-worker.service
sceasyquake/lib/sceasyquake/: __init__.py  uploader.py
sceasyquake/lib/sceasyquake/predictors/: easyquake_gpd.py  easyquake_phasenet.py  eqtransformer.py  gpd.py  phasenet.py  seisbench.py
sceasyquake/lib/sceasyquake/stream/: seiscomp_stream.py  worker.py
sceasyquake/share/defaults/: sceasyquake.cfg
sceasyquake/share/descriptions/: sceasyquake.xml
sceasyquake/share/scripts/: gpd_predict.py  phasenet_predict.py  postprocess.py
sceasyquake/tests/: bench_picker_capacity.py  conftest.py  test_all_pickers.py  test_bbox_service.py  test_job_write.py  test_phasenet_easyquake_adapter.py  test_phasenet_postprocess.py  test_seiscomp_stream_with_app.py  test_stream_worker_with_fake_source.py  test_uploader_yaml.py
